cloudhub/1.0/modules/ROOT/pages/cloudhub-connector-ref.adoc
= CloudHub Connector Reference - Mule 4
:page-aliases: connectors::cloudhub/cloudhub-connector-ref.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

CloudHub Connector v1.0

Anypoint Connector for CloudHub enables you to create and list notifications and to retrieve the status of created applications that are deployed to CloudHub.

Release Notes: xref:release-notes::connector/cloudhub-connector-release-notes-mule-4.adoc[CloudHub Connector Release Notes]


== Configurations
---
[[config]]
=== Default Configuration


Default configuration


==== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| <<config_connection, Connection>>
 | The connection types that can be provided to this configuration. | |x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_connection]]
===== Connection


Connection Provider that provides CloudHubConnection.


====== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Username a| String |  Username of the Anypoint Platform Account |  |x
| Password a| String |  Password of the Anypoint Platform Account |  |x
| Environment a| String |  Optionally specifies the Anypoint Platform environment to use: by default, the environment defined as the default in Anypoint Platform. |  |
| Anypoint Platform URL a| String |  Enables you to change between the US Anypoint Platform and the EU Anypoint Platform, if required. |  `+https://anypoint.mulesoft.com+` |
| Reconnection a| <<Reconnection>> |  If `true`, rejects deployment if the connector connectivity test is unsuccessful after exhausting the associated reconnection strategy. |  |
|===

==== Associated Operations

* <<createNotification>>
* <<getApplication>>
* <<listApplications>>
* <<listNotifications>>
* <<markNotification>>

== Operations

[[createNotification]]
=== Create Notification

`<cloudhub:create-notification>`


Creates a new Notification


==== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Domain a| String |  Name of the application to bind the new notification |  |x
| Message a| String |  Notification's message |  #[payload] |
| Custom Properties a| Object |  Additional properties for the notification |  |
| Priority a| Enumeration, one of:

** ERROR
** INFO
** WARN |  |  |
| Transaction Id a| String |  Transaction ID for the Notification |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== For Configurations

* <<config>>

==== Throws

* CLOUDHUB:CONNECTIVITY
* CLOUDHUB:EXECUTION
* CLOUDHUB:RETRY_EXHAUSTED

[[getApplication]]
=== Get Application

`<cloudhub:get-application>`


Retrieves a single application by name.


==== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Domain a| String |  The name of the application |  |x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream|  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Binary
|===

==== For Configurations

* <<config>>

==== Throws

* CLOUDHUB:CONNECTIVITY
* CLOUDHUB:EXECUTION
* CLOUDHUB:RETRY_EXHAUSTED

[[listApplications]]
=== List Applications

`<cloudhub:list-applications>`


Retrieves all applications in the specified environment.


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Retrieve Log Levels a| Boolean |  Whether should retrieve Application log levels |  true |
| Retrieve Tracking Settings a| Boolean |  Whether should retrieve Application tracking settings |  true |
| Retrieve IP Addresses a| Boolean |  Whether should retrieve Application IP Addresses |  true |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream|  Configure if repeatable streams should be used and their behavior |  |
| Retrieve Statistics a| Boolean |  Whether should retrieve Application statistics |  false |
| Period a| Number |  Time of statistics to gather |  1 |
| Period Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit of the period |  HOURS |
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Binary
|===

==== For Configurations

* <<config>>

==== Throws

* CLOUDHUB:CONNECTIVITY
* CLOUDHUB:EXECUTION
* CLOUDHUB:RETRY_EXHAUSTED

[[listNotifications]]
=== List Notifications

`<cloudhub:list-notifications>`


Lists all the available notifications for a giver domain.


==== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Domain a| String |  Name of the application to gather notifications from |  |x
| Limit a| Number |  Number of notifications to retrieve. -1 means everything available. |  -1 |
| Page Size a| Number |  Size of the page to retrieve per iteration. This only should be changed for performance purposes. |  25 |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure if repeatable streams should be used and their behavior |  |
| Status a| Enumeration, one of:

** READ
** UNREAD
** ALL |  Filters the notifications by status. Read, Unread or All. |  UNREAD |
| Search a| String |  If specified, only return notifications where the message contains this string. (Case Insensitive) |  |
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Array of <<Notification>>
|===

==== For Configurations

* <<config>>

==== Throws

* CLOUDHUB:CONNECTIVITY
* CLOUDHUB:EXECUTION

[[markNotification]]
=== Mark Notification

`<cloudhub:mark-notification>`


Marks a notification as Read or Unread.


==== Parameters

[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Notification Id a| String |  ID of the notification |  |x
| Mark As a| Enumeration, one of:

** READ
** UNREAD |  Action to do. Mark as Read or Unread |  |x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== For Configurations

* <<config>>

==== Throws

* CLOUDHUB:CONNECTIVITY
* CLOUDHUB:EXECUTION
* CLOUDHUB:RETRY_EXHAUSTED

== Types

[[Reconnection]]
=== Reconnection

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory that will be allocated in order to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands  according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much will be buffer size expands if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[Notification]]
=== Notification

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String |  |  | x
| Domain a| String |  |  | x
| Message a| String |  |  |
| Priority a| String |  |  |
| Properties a| Any |  |  |
| Read a| Boolean |  |  | x
| Read On a| DateTime |  |  |
| Created At a| DateTime |  |  | x
| Href a| String |  |  | x
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances to be initially allowed to be kept in memory in order to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then it exapands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | This is the maximum amount of instances that will be kept in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
